update bootstrap properties. fix portfolio main spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -478,7 +478,6 @@ body.portfolio footer hr {
 
 /* Featured Portfolio Items */
 #home-portfolio {
-    margin-top: 100px;
     padding-top: 125px;
     padding-bottom: 125px;
     background: url(../images/skyline-buildings-new-york-skyscrapers-transparent.jpg) no-repeat bottom center fixed; 
@@ -597,6 +596,10 @@ body.portfolio hr {
 }
 
 /* Portfolio Groups */
+body.pf-single section {
+    margin-top: 50px;
+}
+
 #mapsWeb {
     margin-top: 125px;
 }
@@ -743,6 +746,14 @@ body.pf-single .pf-link > .btn {
     }
     
     /* Portfolio */
+    body.pf-single section {
+        margin-top: 0;
+    }
+    
+    body.portfolio .feat-portfolio {
+        padding: 25px 0;
+    }
+    
     #mapsWeb {
         margin-top: 60px;
         padding: 25px 0;
@@ -772,7 +783,7 @@ body.pf-single .pf-link > .btn {
     }
 }
 
-@media (min-width: 769px) {
+@media screen and (min-width: 769px) {
   .navbar-custom {
     padding: 25px 0;
     -webkit-transition: padding 0.3s;
@@ -791,4 +802,57 @@ body.pf-single .pf-link > .btn {
   .navbar-custom.affix .navbar-brand {
     font-size: 1.5em;
   }
+  .navbar-custom .navbar-toggle {
+        font-size: 2em;
+    }
+}
+
+@media screen and (max-width: 991px) {
+    #mapsWeb .portfolio-item div.caption p,
+    #customGIS .portfolio-item div.caption p,
+    #mapsPrint .portfolio-item div.caption p,
+    #webDev .portfolio-item div.caption p,    
+    .feat-portfolio .thumbnail,
+    #mapsPrint .portfolio-item h3,
+    #customGIS .portfolio-item h3,
+    #mapsWeb .portfolio-item h3 {
+        min-height: 0;
+    }    
+}
+
+@media screen and (max-width: 1024px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
 }
